z-index issues

--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,7 @@
 	height: 40vh;
 	overflow: visible;
 	top: 0vh;
+	z-index: 3;
 }
 	
 	.qq-player-button {
